--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -3,8 +3,13 @@ html {
 }
 .navoption {
   display: inline;
+  margin: 20px;
 }
 .active_navoption {
   display: inline;
   text-decoration: blue 5px solid underline;
+  margin: 20px;
+}
+#navbar {
+  text-align: center;
 }
