--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -19,4 +19,8 @@ body {
   text-align: center;
   background-color: rgb(75, 75, 75);
   position: fixed;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none;
+  height:200px;
 }
