--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -8,12 +8,14 @@ body {
   display: inline;
   margin: 20px;
   text-align: center;
+  font-family:9px;
 }
 .active_navoption {
   display: inline;
-  text-decoration: blue 5px solid underline;
+  text-decoration: lightblue 5px solid underline;
   margin: 20px;
   text-align: center;
+  font-family:9px;
 }
 #navbar {
   text-align: center;
@@ -23,5 +25,6 @@ body {
   -webkit-user-select: none; /* Safari */
   -ms-user-select: none; /* IE 10 and IE 11 */
   user-select: none;
+  height:10px;
   display:block
 }
