--- a/styles/mainstyle.css
+++ b/styles/mainstyle.css
@@ -14,6 +14,12 @@ body {
   text-decoration: none;
   color:white;
 }
+.navoption:hover {
+  background-color:grey
+}
+.active_navoption:hover {
+  background-color:grey
+}
 .active_navoption {
   display: inline;
   text-decoration: lightblue 5px solid underline;
